// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gilded Rose > golden test: name:Aged Brie sellIn:-1 quality:1 1`] = `
[
  AgedBrie {
    "name": "Aged Brie",
    "quality": 3,
    "sellIn": -2,
  },
]
`;

exports[`Gilded Rose > golden test: name:Aged Brie sellIn:-1 quality:5 1`] = `
[
  AgedBrie {
    "name": "Aged Brie",
    "quality": 7,
    "sellIn": -2,
  },
]
`;

exports[`Gilded Rose > golden test: name:Aged Brie sellIn:-1 quality:10 1`] = `
[
  AgedBrie {
    "name": "Aged Brie",
    "quality": 12,
    "sellIn": -2,
  },
]
`;

exports[`Gilded Rose > golden test: name:Aged Brie sellIn:1 quality:1 1`] = `
[
  AgedBrie {
    "name": "Aged Brie",
    "quality": 2,
    "sellIn": 0,
  },
]
`;

exports[`Gilded Rose > golden test: name:Aged Brie sellIn:1 quality:5 1`] = `
[
  AgedBrie {
    "name": "Aged Brie",
    "quality": 6,
    "sellIn": 0,
  },
]
`;

exports[`Gilded Rose > golden test: name:Aged Brie sellIn:1 quality:10 1`] = `
[
  AgedBrie {
    "name": "Aged Brie",
    "quality": 11,
    "sellIn": 0,
  },
]
`;

exports[`Gilded Rose > golden test: name:Aged Brie sellIn:5 quality:1 1`] = `
[
  AgedBrie {
    "name": "Aged Brie",
    "quality": 2,
    "sellIn": 4,
  },
]
`;

exports[`Gilded Rose > golden test: name:Aged Brie sellIn:5 quality:5 1`] = `
[
  AgedBrie {
    "name": "Aged Brie",
    "quality": 6,
    "sellIn": 4,
  },
]
`;

exports[`Gilded Rose > golden test: name:Aged Brie sellIn:5 quality:10 1`] = `
[
  AgedBrie {
    "name": "Aged Brie",
    "quality": 11,
    "sellIn": 4,
  },
]
`;

exports[`Gilded Rose > golden test: name:Aged Brie sellIn:10 quality:1 1`] = `
[
  AgedBrie {
    "name": "Aged Brie",
    "quality": 2,
    "sellIn": 9,
  },
]
`;

exports[`Gilded Rose > golden test: name:Aged Brie sellIn:10 quality:5 1`] = `
[
  AgedBrie {
    "name": "Aged Brie",
    "quality": 6,
    "sellIn": 9,
  },
]
`;

exports[`Gilded Rose > golden test: name:Aged Brie sellIn:10 quality:10 1`] = `
[
  AgedBrie {
    "name": "Aged Brie",
    "quality": 11,
    "sellIn": 9,
  },
]
`;

exports[`Gilded Rose > golden test: name:Backstage passes to a TAFKAL80ETC concert sellIn:-1 quality:1 1`] = `
[
  BackstagePasses {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -2,
  },
]
`;

exports[`Gilded Rose > golden test: name:Backstage passes to a TAFKAL80ETC concert sellIn:-1 quality:5 1`] = `
[
  BackstagePasses {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -2,
  },
]
`;

exports[`Gilded Rose > golden test: name:Backstage passes to a TAFKAL80ETC concert sellIn:-1 quality:10 1`] = `
[
  BackstagePasses {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -2,
  },
]
`;

exports[`Gilded Rose > golden test: name:Backstage passes to a TAFKAL80ETC concert sellIn:1 quality:1 1`] = `
[
  BackstagePasses {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 4,
    "sellIn": 0,
  },
]
`;

exports[`Gilded Rose > golden test: name:Backstage passes to a TAFKAL80ETC concert sellIn:1 quality:5 1`] = `
[
  BackstagePasses {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 8,
    "sellIn": 0,
  },
]
`;

exports[`Gilded Rose > golden test: name:Backstage passes to a TAFKAL80ETC concert sellIn:1 quality:10 1`] = `
[
  BackstagePasses {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 13,
    "sellIn": 0,
  },
]
`;

exports[`Gilded Rose > golden test: name:Backstage passes to a TAFKAL80ETC concert sellIn:5 quality:1 1`] = `
[
  BackstagePasses {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 4,
    "sellIn": 4,
  },
]
`;

exports[`Gilded Rose > golden test: name:Backstage passes to a TAFKAL80ETC concert sellIn:5 quality:5 1`] = `
[
  BackstagePasses {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 8,
    "sellIn": 4,
  },
]
`;

exports[`Gilded Rose > golden test: name:Backstage passes to a TAFKAL80ETC concert sellIn:5 quality:10 1`] = `
[
  BackstagePasses {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 13,
    "sellIn": 4,
  },
]
`;

exports[`Gilded Rose > golden test: name:Backstage passes to a TAFKAL80ETC concert sellIn:10 quality:1 1`] = `
[
  BackstagePasses {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 3,
    "sellIn": 9,
  },
]
`;

exports[`Gilded Rose > golden test: name:Backstage passes to a TAFKAL80ETC concert sellIn:10 quality:5 1`] = `
[
  BackstagePasses {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 7,
    "sellIn": 9,
  },
]
`;

exports[`Gilded Rose > golden test: name:Backstage passes to a TAFKAL80ETC concert sellIn:10 quality:10 1`] = `
[
  BackstagePasses {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 12,
    "sellIn": 9,
  },
]
`;

exports[`Gilded Rose > golden test: name:Sulfuras, Hand of Ragnaros sellIn:-1 quality:1 1`] = `
[
  Sulfuras {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 1,
    "sellIn": -1,
  },
]
`;

exports[`Gilded Rose > golden test: name:Sulfuras, Hand of Ragnaros sellIn:-1 quality:5 1`] = `
[
  Sulfuras {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 5,
    "sellIn": -1,
  },
]
`;

exports[`Gilded Rose > golden test: name:Sulfuras, Hand of Ragnaros sellIn:-1 quality:10 1`] = `
[
  Sulfuras {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 10,
    "sellIn": -1,
  },
]
`;

exports[`Gilded Rose > golden test: name:Sulfuras, Hand of Ragnaros sellIn:1 quality:1 1`] = `
[
  Sulfuras {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 1,
    "sellIn": 1,
  },
]
`;

exports[`Gilded Rose > golden test: name:Sulfuras, Hand of Ragnaros sellIn:1 quality:5 1`] = `
[
  Sulfuras {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 5,
    "sellIn": 1,
  },
]
`;

exports[`Gilded Rose > golden test: name:Sulfuras, Hand of Ragnaros sellIn:1 quality:10 1`] = `
[
  Sulfuras {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 10,
    "sellIn": 1,
  },
]
`;

exports[`Gilded Rose > golden test: name:Sulfuras, Hand of Ragnaros sellIn:5 quality:1 1`] = `
[
  Sulfuras {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 1,
    "sellIn": 5,
  },
]
`;

exports[`Gilded Rose > golden test: name:Sulfuras, Hand of Ragnaros sellIn:5 quality:5 1`] = `
[
  Sulfuras {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 5,
    "sellIn": 5,
  },
]
`;

exports[`Gilded Rose > golden test: name:Sulfuras, Hand of Ragnaros sellIn:5 quality:10 1`] = `
[
  Sulfuras {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 10,
    "sellIn": 5,
  },
]
`;

exports[`Gilded Rose > golden test: name:Sulfuras, Hand of Ragnaros sellIn:10 quality:1 1`] = `
[
  Sulfuras {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 1,
    "sellIn": 10,
  },
]
`;

exports[`Gilded Rose > golden test: name:Sulfuras, Hand of Ragnaros sellIn:10 quality:5 1`] = `
[
  Sulfuras {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 5,
    "sellIn": 10,
  },
]
`;

exports[`Gilded Rose > golden test: name:Sulfuras, Hand of Ragnaros sellIn:10 quality:10 1`] = `
[
  Sulfuras {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 10,
    "sellIn": 10,
  },
]
`;
